Fix issues in styling, part 1
forgot to add in the "::-webkit-scrollbar" suffix.

--- a/Transcyclopedia/sanfrancisco/bus/css_assets/responsiveness_and_scrollbars.css
+++ b/Transcyclopedia/sanfrancisco/bus/css_assets/responsiveness_and_scrollbars.css
@@ -173,7 +173,7 @@
     right: 20px;
 }
 
-.headerforbusalerts {
+.headerforbusalerts::-webkit-scrollbar {
     height: 5px;
     position: relative;
     right: 20px;
